chore: fix iframe background color in dark mode (#5223)
* chore: fix GH button background color in dark mode

* Fix for Canny

--- a/website/src/pages/feedback/styles.module.css
+++ b/website/src/pages/feedback/styles.module.css
@@ -9,4 +9,5 @@
   padding: var(--ifm-spacing-horizontal);
   border-radius: 4px;
   background: var(--ifm-color-feedback-background);
+  color-scheme: auto;
 }
